objects/Sprint_UAT__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprints_UAT_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Test Steps/ Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Ready for Re-test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Steps__c</fullName>
        <label>Solution Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipName>Sprints_UAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UAT Defect Track</label>
    <nameField>
        <displayFormat>UAT-{0000}</displayFormat>
        <label>Sprint UAT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Defect Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>